Comment out message form and put only contact email instead.

--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
 					<div class="container">
 						<header class="major">
 							<h2>Contact</h2>
-							<p>Please send us a message to get in touch with us.</p>
+							<p>To get in touch with us, please contact us at <strong>contact@soterai.co.uk</strong></p>
 						</header>
 					</div>
 				</section>
 
-			<!-- Message form -->
+			<!-- Message form 
 				<section id="contact" class="main">
 					<div class="content style featured">
 						<div class="container medium">
@@ -142,6 +142,9 @@
 						</div>
 					</div>
 				</section>
+
+			-->
+
 
 			<!-- Footer -->
 				<footer id="footer">
