Comment out message form and put only contact email instead.

--- a/index.html
+++ b/index.html
@@ -119,29 +119,41 @@
 					</div>
 				</section>
 
-			<!-- Message form -->
-				<section id="contact" class="main">
-					<div class="content style featured">
-						<div class="container medium">
-							<form method="post" action="#">
-								<div class="row gtr-50">
-									<div class="col-6 col-12-mobile"><input type="text" placeholder="Name" /></div>
-									<div class="col-6 col-12-mobile"><input type="text" placeholder="Email" /></div>
-									<div class="col-12">
-										<textarea name="message" id="message" placeholder="Enter your message" rows="8"></textarea>
-									</div>
+		<!-- Contact -->
+			<section id="four" class="wrapper style1 special fade-up">
+				<div class="container">
+					<header class="major">
+						<h2>Contact</h2>
+						<p>To get in touch with us, please contact us at <strong>contact@soterai.co.uk</strong></p>
+					</header>
+				</div>
+			</section>
 
-									<div class="col-12">
-										<ul class="actions special">
-											<li><input type="submit" class="button" value="Send Message" /></li>
-											<li><input type="reset" class="button alt" value="Clear Form" /></li>
-										</ul>
-									</div>
+		<!-- Message form 
+			<section id="contact" class="main">
+				<div class="content style featured">
+					<div class="container medium">
+						<form method="post" action="#">
+							<div class="row gtr-50">
+								<div class="col-6 col-12-mobile"><input type="text" placeholder="Name" /></div>
+								<div class="col-6 col-12-mobile"><input type="text" placeholder="Email" /></div>
+								<div class="col-12">
+									<textarea name="message" id="message" placeholder="Enter your message" rows="8"></textarea>
 								</div>
-							</form>
-						</div>
+
+								<div class="col-12">
+									<ul class="actions special">
+										<li><input type="submit" class="button" value="Send Message" /></li>
+										<li><input type="reset" class="button alt" value="Clear Form" /></li>
+									</ul>
+								</div>
+							</div>
+						</form>
 					</div>
-				</section>
+				</div>
+			</section>
+
+		-->
 
 			<!-- Footer -->
 				<footer id="footer">
