Remove double contact

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 					<a href="#four" class="goto-next scrolly">Next</a>
 				</section>
 
-			<!-- Contact -->
+			<!-- Contact 
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
@@ -118,6 +118,8 @@
 						</header>
 					</div>
 				</section>
+
+		-->
 
 		<!-- Contact -->
 			<section id="four" class="wrapper style1 special fade-up">
