--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 							<p>Powered by state-of-the-art technology developed at the Transport Systems and Logistics Lab and the Personal Robotics Lab.</p>
 						</header>
 						<ul class="actions">
-							<li><a href="https://tslab.org" class="button">Learn More</a></li>
+							<li><a href="https://www.tslab.org" class="button">Learn More</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
