Fix contact button

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 		-->
 
 		<!-- Contact -->
-			<section id="four" class="wrapper style1 special fade-up">
+			<section id="contact" class="wrapper style1 special fade-up">
 				<div class="container">
 					<header class="major">
 						<h2>Contact</h2>
